--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 stages:
   - docker
+  - test-docker
+  - build-databases
 
 build_docker_image:
   stage: docker
@@ -7,6 +9,11 @@ build_docker_image:
     - make docker-build
 
 validate_docker_image:
-  stage: docker
+  stage: test-docker
   script:
     - docker run --rm -v $PWD:/srv/onpdb onpdb-environment true
+
+build-databases:
+  stage: build-databases
+  script:
+    - docker run --rm -v $PWD:/srv/onpdb onpdb-environment make databases
