--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - docker
   - test-docker
+  - pull-data
   - build-databases
 
 build_docker_image:
@@ -13,7 +14,12 @@ validate_docker_image:
   script:
     - docker run --rm -v $PWD:/srv/onpdb onpdb-environment true
 
+dvc-pull:
+  stage: pull-data
+  script:
+    - docker run --rm -v $PWD:/srv/onpdb onpdb-environment bash -c "cd /srv/onpdb && dvc pull -f"
+
 build-databases:
   stage: build-databases
   script:
-    - docker run --rm -v $PWD:/srv/onpdb onpdb-environment make databases
+    - docker run --rm -e DATA_PATH=/srv/onpdb/data -e SRC_PATH=/srv/onpdb/data -v $PWD:/srv/onpdb onpdb-environment make databases
