--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,9 +17,9 @@ validate_docker_image:
 dvc-pull:
   stage: pull-data
   script:
-    - docker run --rm -v /home/gitlab-runner/.aws:/home/user/.aws -v $PWD:/srv/onpdb -v /srv/onpdb-data/dvc/tmp:/srv/onpdb/.dvc/tmp -v /srv/onpdb-data/dvc/cache:/srv/onpdb/.dvc/cache onpdb-environment bash -c "cd /srv/onpdb && dvc pull -f"
+    - docker run --rm -v /home/gitlab-runner/.aws:/home/user/.aws -v $PWD:/srv/onpdb  -v /srv/onpdb-data/dvc:/srv/dvc onpdb-environment bash -c "cd /srv/onpdb && dvc cache /srv/dvc && dvc pull -f"
 
 build-databases:
   stage: build-databases
   script:
-    - docker run --rm -e DATA_PATH=/srv/onpdb/data -e SRC_PATH=/srv/onpdb/src -v /srv/onpdb-data/dvc/tmp:/srv/onpdb/.dvc/tmp -v /srv/onpdb-data/dvc/cache:/srv/onpdb/.dvc/cache -v $PWD:/srv/onpdb onpdb-environment make databases
+    - docker run --rm -e DATA_PATH=/srv/onpdb/data -e SRC_PATH=/srv/onpdb/src -v /srv/onpdb-data/dvc:/srv/dvc -v $PWD:/srv/onpdb onpdb-environment make databases
