--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,14 +21,12 @@ dvc-pull:
   rules:
     - changes:
       - data/*.dvc
-    - when: manual  
 
 build-databases:
   stage: build-databases
   script:
-    - docker run --rm -e DATA_PATH=/srv/onpdb/data -e SRC_PATH=/srv/onpdb/src -v /srv/onpdb-data/dvc:/srv/dvc -v /srv/onpdb-data/external:/srv/onpdb/data/external -v /srv/onpdb-data/interim:/srv/onpdb/data/interim -v /srv/onpdb-data/processed:/srv/onpdb/data/processed -v $PWD:/srv/onpdb onpdb-environment "cd /srv/onpda && make databases"
+    - docker run --rm -e DATA_PATH=/srv/onpdb/data -e SRC_PATH=/srv/onpdb/src -v /srv/onpdb-data/dvc:/srv/dvc -v /srv/onpdb-data/external:/srv/onpdb/data/external -v /srv/onpdb-data/interim:/srv/onpdb/data/interim -v /srv/onpdb-data/processed:/srv/onpdb/data/processed -v $PWD:/srv/onpdb onpdb-environment "cd /srv/onpdb && make databases"
   rules:
     - changes:
       - data/*.dvc
       - src/1_gathering/db/**/*
-    - when: manual  
