--- a/dvc.yaml
+++ b/dvc.yaml
@@ -6,3 +6,12 @@ stages:
     - src/2_curating/2_editing/chemo/subscripts/1_translating/smiles_min.py
     outs:
     - data/dvc_pipeline_outputs/translatedStructureSmiles_min.tsv.zip
+  sanitizer:
+    cmd: python src/2_curating/2_editing/chemo/subscripts/2_curatingAndEnriching/04_sanitizing.py
+      data/interim/tables/1_translated/translatedTable.tsv.zip data/dvc_pipeline_outputs/sanitized_structures.tsv.zip
+      structureTranslated
+    deps:
+    - data/interim/tables/1_translated/translatedTable.tsv.zip
+    - src/2_curating/2_editing/chemo/subscripts/2_curatingAndEnriching/04_sanitizing.py
+    outs:
+    - data/dvc_pipeline_outputs/sanitized_structures.tsv.zip
